Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112277

Title text of stacked dock widgets shown in wrong location during drag

XMLWordPrintable

    • d4b40fa96 (dev)

      To reproduce:

      • run attached project
      • drag one dock to another to stack them
      • start dragging the right most dock widget tab

      The text of the dock widget tab moves away. Instead it should remain within the tab.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            axelspoerl Axel Spoerl
            poikelin Joni Poikelin
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes